<resources>
    <string name="app_name">پیش بینی عشق آینده</string>
    <string name="Your_Name">نام شما</string>
    <string name="Your_age">سن شما</string>
    <string name="Are_You_The_girl_Or_Boy">دختری یا پسر؟</string>
    <string name="The_Girl">دختر</string>
    <string name="The_Boy">پسر</string>
    <string name="Are_you_Girl_or_boy">دختری یا پسر؟</string>
    <string name="Girl">دختر</string>
    <string name="Boy">پسر</string>
    <string name="Title">برای پیش بینی عشق آینده ات انگشتت را روی قلب زیر بزار و منتظر بمون.</string>
    <string name="taylor_hill">Taylor Hill</string>
    <string name="home">Home</string>
    <string name="about_us">about us</string>
    <string name="help">help</string>
    <string name="Contact">Contact</string>
    <string name="contact">Contact</string>
    <string name="exit">Exit</string>
    <string name="open">open_Drawer</string>
    <string name="close">close_Drawer</string>
    <string name="_03">03</string>
    <string name="title">برای پیش بینی عشق آینده ات انگشت ات را روی اثر انگشت زیر بزار منتظر بمون.</string>
    <string name="contact_txt">
          تیم پشتیبانی شرکت لالی پاپ در این بخش در کنار شماست . تا
                        پاسخگوی مشکلات، نظرات و انتقادات شما باشد.
         لطفاً جهت تسریع و سهولت پاسخگویی، مساله خود را در قالب یک
        پیغام ارسال نمایید.پیغام شما بررسی شده و در اسرع وقت پاسخ
                                                   داده خواهد شد.
                                    از صبر و شکیبایی شما متشکریم.
    </string>
    <string name="_14046205632">+14046205632</string>
    <string name="nrai0818">NrAi0818</string>
    <string name="nr_ai80">Nr_Ai80</string>
    <string name="_13_3_2">نسخه ای آزمایشی 13.3.2</string>
    <string name="about_us_txt">
         با سلام به خدمت خوانده عزیز.
        بازی پیش بینی عشق آینده محصول شرکت لالی پاپ می باشد.
        که برنامه نویسان کارآموز این شرکت این بازی را طراحی
        نموده اند.  که صرفاً برای پیشرفت مهارت برنامه نویسان
        کارآموز این شرکت می باشد .
        شرکت لالی پاپ در  سال 2022 تاسیس شده است  که اقدام به
        انتشار بازی اندرویدی نموده است.
    </string>
    <string name="guide_game">
        بازی پیش بینی عشق آینده ، بازی است که نام و اسم و محل
        سکونت عشق آینده تان را معرفی می نمایید.
        روش بازی چگونه است ابتدا باید نام تان را وارد نمایید و
        بعد سن تان را وارد نمایید  و بعد از انتخاب  جنیست تان
        نوبت به گذشتن انگشت تان بر روی حس گر انگشت می باشد.
        آنگاه برنامه عشق تان را معرفی می نمایید.
        امیدوارم از بازی لذت ببرید.
    </string>
</resources>