<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".content"
    android:background="@drawable/images">

    <TextView
        android:id="@+id/contact_txt_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="500dp"
        android:text="@string/contact_txt"
        android:textColor="#80062F"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="26dp"
        android:layout_marginTop="52dp"
        android:text="@string/_14046205632"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txt_xml"
        app:layout_constraintVertical_bias="0.017" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="67dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txt_xml"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/img_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="233dp"
        android:layout_height="23dp"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="256dp"
        android:text="@string/nrai0818"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txt_xml"
        app:layout_constraintVertical_bias="0.029" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="67dp"
        android:layout_height="59dp"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txt_xml"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="233dp"
        android:layout_height="23dp"
        android:layout_marginTop="244dp"
        android:text="@string/nr_ai80"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txt_xml"
        app:layout_constraintVertical_bias="0.07" />

    <ImageView
        android:layout_width="67dp"
        android:layout_height="59dp"
        android:layout_marginTop="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txt_xml"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/img_3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="94dp"
        android:layout_height="84dp"
        android:layout_marginTop="308dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txt_xml"
        app:srcCompat="@drawable/img_4" />

    <TextView
        android:layout_width="183dp"
        android:layout_height="31dp"
        android:layout_marginTop="336dp"
        android:text="@string/_13_3_2"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txt_xml" />

</android.support.constraint.ConstraintLayout>